# SocialDataHub_IAM_ControleEHPAD

./: .gitignore  .python-version  README.md  pyproject.toml
cicd_saagie_tool/: __main__.py
code/jobs/extract_transform_infer/: requirements.txt
code/jobs/extract_transform_infer/inference_llm/: data_models.py  main.py  settings_llm demo.json  settings_variables.py  standard_utils.py
code/jobs/extract_transform_infer/text_extraction/: __init__.py  acronyme_mapping.json  main.py  preprocess_text.py  settings_variables.py
code/jobs/extract_transform_infer/text_transformation/: main.py  settings_variables_transform.py  transform_text.py
code/jobs/extract_transform_infer/text_transformation/data/extraction/: extraction.pkl
code/jobs/extract_transform_infer/text_transformation/data/input/: CSP Jardins d'Azur.docx  CSP Le Bois Joli.docx  CSP Le Mas de la Cote Bleue.docx  CSP Verte Prairie.docx  CSP _ Maison des collines 3 .docx  Rapport contradictoire_ CSP_ EHPAD CHICAS.docx  Rapport contradictoire_ CSP_ EHPAD Résidence les colibris.docx  Rapport_Insp Ste Famille_V4.docx
code/jobs/extract_transform_infer/text_transformation/data/transform/: transform
code/jobs/print_hello_world/: __main__.py
saagie/envs/: dev.json
saagie/jobs/: extract_transform_infer.json  print_hello_world.json
